# currency-exchange-fapi

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 5868057f4869_init_migration.py
docker/: Dockerfile.currencyexchange  docker-compose.dev.yaml  docker-compose.front-tgbot.yaml  docker-compose.prod.yaml
docker/nginx/: docker-compose.nginx.opt.prod.yml  nginx.conf
docs/: DEPLOYMENT.md  apispec.md
src/currency_exchange/: config.py  loggingconf.py  main.py
src/currency_exchange/auth/: __init__.py  admin.py  commands.py  dbmodels.py  errors.py  main.py  providers.py  repos.py  routes.py  schemas.py  utils.py
src/currency_exchange/auth/services/: passwordhashing.py  passwordvalidation.py  permissions.py
src/currency_exchange/auth/services/jwtservice/: __init__.py  jwtissuer.py  jwtmodel.py  jwtvalidator.py
src/currency_exchange/currency_exchange/application/: dto.py  errors.py  extdm.py  interfaces.py
src/currency_exchange/currency_exchange/application/interactions/: currenciesinteractions.py  erfetchstrategies.py  exchangeratesinteracions.py
src/currency_exchange/currency_exchange/domain/: entities.py  errors.py  types.py
src/currency_exchange/currency_exchange/fapiadoption/: appadapter.py  dependencies.py  main.py  schemas.py
src/currency_exchange/currency_exchange/fapiadoption/routes/: currencies.py  currenciesconvertion.py  exchangerates.py
src/currency_exchange/currency_exchange/infrastructure/db/: dbmodels.py  modelmapping.py  repos.py
src/currency_exchange/db/: crud.py  repoabc.py  session.py
src/currency_exchange/utils/: genkeys.py  importobject.py
tests/: conftest.py
tests/unitary/auth/: conftest.py  test_admin_actions.py  test_get_user.py  test_tokens_granting.py  test_tokens_refresh.py  test_tokens_revoke.py  test_user_registration.py  test_validate_jwt.py  test_verify_access.py  utils.py
tests/unitary/currency_exchange/: conftest.py  test_application.py  test_domain_entities.py  test_fapi_app.py  test_postgres_repo.py  utils.py
