[project]
name = "currency-exchange-fapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Gevorji",email = "techno9882@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "joserfc (>=1.0.4,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]
packages = [{include = "currency_exchange", from = "src"}]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
